crates/popcorntime-graphql-client/src/snapshots/popcorntime_graphql_client__preferences__tests__preferences_mutation_gql_output.snap
---
source: crates/popcorntime-graphql-client/src/preferences.rs
expression: operation.query
---
mutation UpdatePreferencesMutation($country: Country!, $language: Language!) {
  updatePreferences(country: $country, language: $language) {
    language
    country
  }
}
