crates/popcorntime-graphql-client/src/snapshots/popcorntime_graphql_client__preferences__tests__preferences_query_gql_output.snap
---
source: crates/popcorntime-graphql-client/src/preferences.rs
expression: operation.query
---
query PreferencesOutput {
  preferences {
    language
    country
  }
}
